# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  include
  private_include
  )


# ===================================================================
#  マクロの定義
# ===================================================================

set ( DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/testdata )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( c++-src )
if ( Python3_FOUND )
  add_subdirectory( py_capi )
  add_subdirectory( pytest )
endif ( Python3_FOUND )
add_subdirectory( test-programs )


# ===================================================================
#  ソースの設定
# ===================================================================


# ===================================================================
#  ターゲットの設定
# ===================================================================
