# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

set ( DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/testdata )

add_subdirectory( gtest )
add_subdirectory( programs )
if ( Python3_FOUND )
  add_subdirectory( py_ymsat )
endif ( Python3_FOUND )


# ===================================================================
#  ターゲットの設定
# ===================================================================
